--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
-<h1>c3ecom</h1>
-<p>
-  This is the home page for the c3ecom application.
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to c3ecom</h1>
+
+  <h2>
+    This is the home page for the c3ecom application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
