--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,9 @@
   <h2>
     This is the home page for the c3ecom application.
   </h2>
+  <h2>
+    Premium purveyors of perfect paints, perfumes, powders and I've run out of p-words....
+  </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
