--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="navbar navbar-fixed-top">
-  <a class="brand" href='#'>Cosmetics Cubed</a>
+  <a class="brand">Cosmetics Cubed</a>
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "sample app", root_path, id: "logo" %>
