--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li class="divider"></li>
-                  <li><%= link_to "Location to Item Maintenance", '#' %></li>
+                  <li><%= link_to "Location to Item Maintenance", direct_bin_contents_path %></li>
                   <li class="divider"></li>
                 </ul>
               </li>
