--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,18 @@
 <%= provide(:title, @user.name) %>
-<div class="row">
-  <aside class="span6">
-    <section>
-      <h1>
-        <%= @user.name %>,
-        <%= @user.email %>
-      </h1>
-    </section>
-  </aside>
-</div>
-
-
+    <h2>
+      <%= @user.name %>
+    </h2>
+<table class="table">
+  <tr>
+    <th>Email</th>
+    <th>Admin</th>
+    <th>Demand User</th>
+    <th>Direct User</th>
+  </tr>
+  <tr>
+    <td> <%= @user.email %>  </td>
+    <td> <%= @user.admin %>  </td>
+    <td> <%= @user.demand %> </td>
+    <td> <%= @user.direct %> </td>
+  </tr>
+</table>
