--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,9 @@
   <h2>
     Premium purveyors of perfect paints, perfumes, powders and I've run out of p-words....
   </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <% if !signed_in? %>
+     <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <% end %>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<%= link_to image_tag("rails.png", alt: "C3 Intranet"), 'http://intranet.c3.local/twiki/bin/view/C3' %>
