edit bin contents

--- a/app/views/direct_bin_contents/index.html.erb
+++ b/app/views/direct_bin_contents/index.html.erb
@@ -1,6 +1,23 @@
 <% provide(:title, 'All Bin Contents') %>
 <h1>All Bin Contents</h1>
 
+<form class="form-horizontal">
+  <fieldset>
+
+    <!-- Form Name -->
+    <legend>Filters</legend>
+
+    <!-- Search input-->
+    <div class="control-group">
+      <label class="control-label" for="search">Item Code</label>
+      <div class="controls">
+        <input id="search" name="search" class="input-medium search-query" type="text">
+      </div>
+    </div>
+
+  </fieldset>
+</form>
+
 <%= will_paginate %>
 
 <ul class="users">
@@ -14,7 +31,7 @@
 
   <% @direct_bin_contents.each do |direct_bin_content| %>
       <tr>
-        <td><%= link_to direct_bin_content.item_code %></td>
+        <td><%= link_to direct_bin_content.item_code, direct_bin_content %></td>
         <td><%= direct_bin_content.bin_name %></td>
         <td><%= direct_bin_content.updated_at %></td>
         <td><%= direct_bin_content.created_at %></td>
