--- a/app/views/direct_bin_contents/index.html.erb
+++ b/app/views/direct_bin_contents/index.html.erb
@@ -31,10 +31,11 @@
 
   <% @direct_bin_contents.each do |direct_bin_content| %>
       <tr>
-        <td><%= link_to direct_bin_content.item_code, direct_bin_content %></td>
+        <td><%= link_to direct_bin_content.item_code, edit_direct_bin_content_path(direct_bin_content.id) %></td>
         <td><%= direct_bin_content.bin_name %></td>
         <td><%= direct_bin_content.updated_at %></td>
         <td><%= direct_bin_content.created_at %></td>
+        <td><%= link_to "Delete", direct_bin_content, method: :delete, data: { confirm:"You sure?"} %></td>
       </tr>
   <% end %>
   </table>
