--- a/app/views/direct_bin_contents/edit.html.erb
+++ b/app/views/direct_bin_contents/edit.html.erb
@@ -1,10 +1,17 @@
 <% provide(:title, "Edit bin contents") %>
-<h1>Edit Item/Bin relation</h1>
+<h2>Edit Item:</h2>
 
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@direct_bin_contents) do |f| %>
-        <%= render 'shared/error_messages' %>
+        <%= render 'shared/error_messages_dbc' %>
+
+        <%= f.label :item_code %>
+        <%= f.text_field :item_code, :disabled=>true %>
+
+
+        <%= f.label :bin_name %>
+        <%= f.text_field :bin_name %>
 
         <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
