--- a/app/views/direct_bin_contents/index.html.erb
+++ b/app/views/direct_bin_contents/index.html.erb
@@ -17,7 +17,7 @@
 
   </fieldset>
 </form>
-
+<%= link_to "Add new item", new_direct_bin_content_path %>
 <%= will_paginate %>
 
 <ul class="users">
