--- a/app/views/direct_bin_contents/new.html.erb
+++ b/app/views/direct_bin_contents/new.html.erb
@@ -1,2 +1,20 @@
-<h1>DirectBinContents#new</h1>
-<p>Find me in app/views/direct_bin_contents/new.html.erb</p>
+<% provide(:title, 'New Item') %>
+<h1>Create new item</h1>
+
+<div class="row">
+  <div class="span6 offset3">
+    <%= form_for(@direct_bin_contents) do |f| %>
+
+        <%= render 'shared/error_messages_dbc' %>
+
+        <%= f.label :item_code %>
+        <%= f.text_field :item_code %>
+
+        <%= f.label :bin_name %>
+        <%= f.text_field :bin_name %>
+
+
+        <%= f.submit "Create Item", class: "btn btn-large btn-primary" %>
+    <% end %>
+  </div>
+</div>
