add bin name to search

--- a/app/views/direct_bin_contents/index.html.erb
+++ b/app/views/direct_bin_contents/index.html.erb
@@ -9,7 +9,7 @@
 
     <!-- Search input-->
     <div class="control-group">
-      <label class="control-label" for="search">Item Code</label>
+      <label class="control-label" for="search">Item Code or Bin Code</label>
       <div class="controls">
         <input id="search" name="search" class="input-medium search-query" type="text">
       </div>
@@ -17,6 +17,7 @@
 
   </fieldset>
 </form>
+
 <%= link_to "Add new item", new_direct_bin_content_path %>
 <%= will_paginate %>
 
