--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,8 @@
                   <li class="divider"></li>
                   <li><%= link_to "Location to Item Maintenance", direct_bin_contents_path %></li>
                   <li class="divider"></li>
+                  <li><%= link_to "Pick Path Maintenance", pick_paths_path %></li>
+                  <li class="divider"></li>
                 </ul>
               </li>
           <% end %>
