--- a/app/views/direct_bin_contents/edit.html.erb
+++ b/app/views/direct_bin_contents/edit.html.erb
@@ -11,7 +11,7 @@
 
 
         <%= f.label :bin_name %>
-        <%= f.text_field :bin_name %>
+        <%= f.text_field :bin_name, :autofocus => true %>
 
         <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
