--- a/app/views/direct_bin_contents/new.html.erb
+++ b/app/views/direct_bin_contents/new.html.erb
@@ -8,7 +8,7 @@
         <%= render 'shared/error_messages_dbc' %>
 
         <%= f.label :item_code %>
-        <%= f.text_field :item_code %>
+        <%= f.text_field :item_code, :autofocus => true %>
 
         <%= f.label :bin_name %>
         <%= f.text_field :bin_name %>
