truncate table form

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
                   Demand Functions <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "fct_event_forecast", '#' %></li>
+                  <li><%= link_to "Truncate tables", truncate_path %></li>
                   <li class="divider"></li>
                 </ul>
               </li>
