--- a/app/views/static_pages/truncate.html.erb
+++ b/app/views/static_pages/truncate.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Truncate') %>
 <h2>Truncate</h2>
+
 <form class="form-horizontal">
   <fieldset>
 
@@ -49,13 +50,11 @@
       </div>
     </div>
 
-    <!-- Button -->
-    <div class="control-group">
-      <label class="control-label" for="truncatebutton">Truncate Me!</label>
-      <div class="controls">
-        <%= button_to 'Go ahead, truncate my day.',{controller => :static_pages, :action => 'truncate_table'}, class: 'btn btn-warning btn-large' %>
-      </div>
-    </div>
 
   </fieldset>
 </form>
+<div class="control-group">
+  <div class="controls">
+    <%= button_to 'Go ahead, truncate my day.', { :controller => :static_pages, :action => :table_truncate, :id => @select_table }, :method => :post, class: 'btn btn-warning btn-large' %>
+  </div>
+</div>
