--- a/app/views/static_pages/truncate.html.erb
+++ b/app/views/static_pages/truncate.html.erb
@@ -51,7 +51,7 @@
     </div>
     <div class="control-group">
       <div class="controls">
-        <%= button_to 'Go ahead, truncate my day.', { :controller => :static_pages, :action => :table_truncate, :id => @select_table }, :method => :post, class: 'btn btn-warning btn-large' %>
+        <%= button_to 'Go ahead truncate my day.', {:controller => :static_pages, :action => 'table_truncate', :id => @select_table }, :method => :post, class: 'btn btn-warning btn-large' %>
       </div>
     </div>
 
