truncate works! plus load table start

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Truncate tables", truncate_path %></li>
+                  <li><%= link_to "Load tables", load_path %></li>
                   <li class="divider"></li>
                 </ul>
               </li>
