--- a/app/views/static_pages/load.html.erb
+++ b/app/views/static_pages/load.html.erb
@@ -42,12 +42,14 @@
           <option> c3demand.fct_total_bu_forecast </option>
           <option> c3demand.fct_total_gu_item_format_fc </option>
           <option> c3demand.fct_forecast_same_store </option>
+          <option> c3demand.fct_brand_forecast_splits </option>
           <option> c3dss.fct_event_forecast </option>
           <option> c3dss.fct_planned_vendor </option>
           <option> c3dss.fct_store_forecast_raw </option>
           <option> c3dss.fct_store_sales_weight </option>
           <option> c3dss.fct_store_ranging_weight </option>
-          <option> c3dss.fct_new_store_ranging </option>".html_safe, class: "input-xlarge"
+          <option> c3dss.fct_new_store_ranging </option>
+          <option> c3dss.fct_brand_forecast_raw </option>".html_safe, class: "input-xlarge"
          %>
 
        <div>
