allocation screen and routes

--- a/app/views/static_pages/truncate.html.erb
+++ b/app/views/static_pages/truncate.html.erb
@@ -51,7 +51,7 @@
          %>
 
        <div>
-         <%= submit_tag 'Go ahead, truncate my day.', date: {confirm: 'Are you sure?'}, class: 'btn btn-warning btn-large' %>
+         <%= submit_tag 'Go ahead, truncate my day.', data: {confirm: 'Are you sure?'}, class: 'btn btn-warning btn-large' %>
        </div>
 
 <% end %>
