allocation order lines controller

--- a/app/views/allocation_order_lines/allocate.html.erb
+++ b/app/views/allocation_order_lines/allocate.html.erb
@@ -8,7 +8,7 @@
     <%= text_field_tag('upc', nil, autofocus: 'true', placeholder: 'Scan barcode or type in I code', class: 'input-xlarge search-query') %>
 
     <div>
-       <%= submit_tag 'Get Basket for item    ', class: 'btn btn-success btn-large' %>
+       <%= submit_tag 'Display basket and add item to order', class: 'btn btn-success btn-large' %>
     </div>
 
 <% end %>
