Display variable into partial

--- a/app/views/allocation_order_lines/_basket_display.html.erb
+++ b/app/views/allocation_order_lines/_basket_display.html.erb
@@ -1,6 +1,5 @@
-<p>
-  <div class="text-center">
-    Display basket ID here
-    <%= @basket_number.inspect %>
-  </div>
-</p>
+<div class="text-center">
+
+     <%= basket_num %>
+
+</div>
