hero unit for basket number

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -183,3 +183,19 @@ input {
     }
   }
 }
+
+.hero-unit-success {
+  font-size: 100px;
+  color: #00CC00;
+  background-color: #EBEBEB;
+  border-radius: 20px;
+
+}
+
+.hero-unit-error {
+  font-size: 100px;
+  color: #00CC00;
+  background-color: #ff0000;
+  border-radius: 20px;
+
+}
