--- a/app/views/allocation_order_lines/_basket_display.html.erb
+++ b/app/views/allocation_order_lines/_basket_display.html.erb
@@ -1,5 +1,5 @@
-<div class="text-center">
+<div class ='center hero-unit hero-unit-success '>
 
-     <%= basket_num %>
+      <%= basket_num %>
 
 </div>
