truncate load table change

--- a/app/views/static_pages/truncate.html.erb
+++ b/app/views/static_pages/truncate.html.erb
@@ -40,7 +40,7 @@
           <option> c3demand.fct_total_bu_forecast </option>
           <option> c3demand.fct_total_gu_item_format_fc </option>
           <option> c3demand.fct_forecast_same_store </option>
-          <option> c3demand.fct_brand_forecast_splits </option>
+          <option> c3demand.fct_post_launch_le_fc </option>
           <option> c3dss.fct_event_forecast </option>
           <option> c3dss.fct_planned_vendor </option>
           <option> c3dss.fct_store_forecast_raw </option>
