new demand tables

--- a/app/views/static_pages/load.html.erb
+++ b/app/views/static_pages/load.html.erb
@@ -35,6 +35,7 @@
           <option> c3demand.fct_pre_launch_new_tester </option>
           <option> c3demand.fct_prelaunch_new_fc_inputs </option>
           <option> c3demand.fct_promo_up_fc </option>
+          <option> c3demand.fct_promo_uplift_fc_inputs </option>
           <option> c3demand.fct_replen_sales_hist </option>
           <option> c3demand.fct_replen_supplies_fc </option>
           <option> c3demand.fct_replen_tester_fc </option>
