--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,4 +12,4 @@
   <% end %>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "C3 Intranet"), 'http://intranet.c3.local/twiki/bin/view/C3' %>
+<%= link_to 'C3 Intranet', 'http://intranet.c3.local/twiki/bin/view/C3' %>
