--- a/app/views/static_pages/load.html.erb
+++ b/app/views/static_pages/load.html.erb
@@ -13,6 +13,7 @@
           <option> c3demand.fct_base_replen_fc_item_format </option>
           <option> c3demand.fct_brand_forecast_splits </option>
           <option> c3demand.fct_event_fc </option>
+          <option> c3demand.fct_fc_reco_adjustments </option>
           <option> c3demand.fct_forecast_same_store </option>
           <option> c3demand.fct_forecastcosts </option>
           <option> c3demand.fct_forecastitemmaster </option>
