--- a/app/views/allocation_orders/index.html.erb
+++ b/app/views/allocation_orders/index.html.erb
@@ -1,4 +1,45 @@
-<% provide(:title, 'Allocation Engine') %>
-<h1>Allocate your picks</h1>
+<% provide(:title, 'Allocation Orders') %>
+<h1>Allocation Orders</h1>
 
-In progress
+<form class="form-horizontal">
+  <fieldset>
+
+    <!-- Form Name -->
+    <legend>Filters</legend>
+
+    <!-- Search input-->
+    <div class="control-group">
+      <label class="control-label" for="search">Allocation Order</label>
+      <div class="controls">
+        <input id="search" name="search" class="input-medium search-query" type="text" autofocus="true">
+      </div>
+    </div>
+
+  </fieldset>
+</form>
+
+<%= will_paginate %>
+
+<ul class="users">
+  <table class="table table-striped">
+    <tr>
+      <th> Order # </th>
+      <th> Order Date </th>
+      <th> Order Priority </th>
+      <th> Order Complete </th>
+      <th> Order Processed </th>
+    </tr>
+
+    <% @allocation_orders.each do |allocation_orders| %>
+        <tr>
+          <td><%= link_to allocation_orders.order_num, allocation_order_lines_path %></td>
+          <td><%= allocation_orders.order_date %></td>
+          <td><%= allocation_orders.order_priority %></td>
+          <td><%= allocation_orders.order_complete %></td>
+          <td><%= allocation_orders.order_processed %></td>
+        </tr>
+    <% end %>
+  </table>
+</ul>
+
+<%= will_paginate %>
