--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,7 @@
                   <li><%= link_to "Location to Item Maintenance", direct_bin_contents_path %></li>
                   <li><%= link_to "Pick Path Maintenance", pick_paths_path %></li>
                   <li><%= link_to "Basket Maintenance", baskets_path %></li>
+                  <li><%= link_to "Allocation Orders", allocation_orders_url %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Allocation", allocate_path %></li>
                 </ul>
