--- a/app/views/allocation_orders/index.html.erb
+++ b/app/views/allocation_orders/index.html.erb
@@ -32,7 +32,7 @@
 
     <% @allocation_orders.each do |allocation_orders| %>
         <tr>
-          <td><%= link_to allocation_orders.order_num, allocation_order_lines_path %></td>
+          <td><%= link_to allocation_orders.order_num, allocation_order_lines_path(allocation_orders.order_num) %></td>
           <td><%= allocation_orders.order_date %></td>
           <td><%= allocation_orders.order_priority %></td>
           <td><%= allocation_orders.order_complete %></td>
