fct_store_pick_scan initial development

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Item Info", items_path %></li>
+          <li><%= link_to "Scan Info", fct_store_pick_scans_path %></li>
           <% if demand_user? %>
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
