--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -147,7 +147,8 @@ aside {
 
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
-  width: 100%;
+  width: auto;
+  height: auto;
   padding: 10px;
   margin-bottom: 15px;
   @include box_sizing;
