--- a/app/views/fct_store_pick_scans/show.html.erb
+++ b/app/views/fct_store_pick_scans/show.html.erb
@@ -1,11 +1,11 @@
 <%= provide(:title, @fct_store_pick_scans.store_code) %>
 <h2>
-  <%= @fct_store_pick_scans.item_code %>
+  <%= @fct_store_pick_scans.store_code %>
 </h2>
 <table class="table">
   <tr>
     <th> Store Code </th>
-    <th> Pack Date </th>
+    <th> Pick Date </th>
     <th> WPI code </th>
     <th> WSN code </th>
     <th> Start Time </th>
@@ -15,14 +15,14 @@
     <th> Checked By </th>
   </tr>
   <tr>
-    <td><%= fct_store_pick_scan.store_code %></td>
-    <td><%= fct_store_pick_scan.pack_date %></td>
-    <td><%= fct_store_pick_scan.wpi_code %></td>
-    <td><%= fct_store_pick_scan.wsn_code %></td>
-    <td><%= fct_store_pick_scan.start_time %></td>
-    <td><%= fct_store_pick_scan.end_time %></td>
-    <td><%= fct_store_pick_scan.picked_by %></td>
-    <td><%= fct_store_pick_scan.scanned_by %></td>
-    <td><%= fct_store_pick_scan.checked_by %></td>
+    <td><%= @fct_store_pick_scans.store_code %></td>
+    <td><%= @fct_store_pick_scans.pick_date %></td>
+    <td><%= @fct_store_pick_scans.wpi_code %></td>
+    <td><%= @fct_store_pick_scans.wsn_code %></td>
+    <td><%= @fct_store_pick_scans.start_time %></td>
+    <td><%= @fct_store_pick_scans.end_time %></td>
+    <td><%= @fct_store_pick_scans.picked_by %></td>
+    <td><%= @fct_store_pick_scans.scanned_by %></td>
+    <td><%= @fct_store_pick_scans.checked_by %></td>
   </tr>
 </table>
