--- a/app/views/fct_store_pick_scans/new.html.erb
+++ b/app/views/fct_store_pick_scans/new.html.erb
@@ -62,6 +62,28 @@
         <%= f.label :pick_date %>
         <%= f.date_select(:pick_date, order: [:day, :month, :year]) %>
 
+        <%= f.label :start_time %>
+        <%= f.datetime_select(:start_time, order: [:day, :month, :year]) %>
+
+        <%= f.label :end_time %>
+        <%= f.datetime_select(:end_time, order: [:day, :month, :year]) %>
+
+        <%= f.label :wsn_code %>
+        <%= f.text_field :wsn_code %>
+
+        <%= f.label :wpi_code %>
+        <%= f.text_field :wpi_code %>
+
+        <%= f.label :picked_by %>
+        <%= f.text_field :picked_by %>
+
+        <%= f.label :scanned_by %>
+        <%= f.text_field :scanned_by %>
+
+        <%= f.label :checked_by %>
+        <%= f.text_field :checked_by %>
+
+        <br>
 
         <%= f.submit "Create Pick/scan", class: "btn btn-large btn-primary" %>
     <% end %>
