--- a/app/views/baskets/edit.html.erb
+++ b/app/views/baskets/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Edit  Basket') %>
-<h1>Edit Basket</h1>
+<h1>Edit Basket #<%= @basket.basket_num %></h1>
 
 <div class="row">
   <div class="span6 offset3">
