--- a/app/views/baskets/index.html.erb
+++ b/app/views/baskets/index.html.erb
@@ -1,24 +1,39 @@
 <% provide(:title, 'Baskets') %>
 <h1>Baskets</h1>
 
+<form class="form-horizontal">
+  <fieldset>
 
+    <legend>Filters</legend>
 
+    <div class="control-group">
+      <label class="control-label" for="search" style="width:220px;">Basket Number or Order Number</label>
+      <div class="controls">
+        <input id="search" name="search" class="input-medium search-query" type="text">
+      </div>
+    </div>
+
+  </fieldset>
+</form>
+
+<%= link_to "Add new basket", new_basket_path %>
+<br/>
 <%= will_paginate %>
+<br/>
 <div class="baskets">
   <table class="table table-striped">
     <tr>
       <th> Basket Number </th>
       <th> Order Number </th>
       <th colspan=2> Actions </th>
-     </tr>
+    </tr>
   <% @baskets.each do |basket| %>
       <tr>
         <td><%= basket.basket_num %></td>
         <td><%= basket.order_num %></td>
         <td><%= link_to 'Edit', edit_basket_path(basket) %></td>
-        <td><%= link_to 'Delete', basket, :confirm => 'Are you sure?', :method => :delete %></td>
+        <td><%= link_to 'Delete', basket, :method => :delete, data: { confirm:"Are you sure?"} %></td>
       </tr>
-
   <% end %>
   </table>
 </div>
