add tables to truncate/load

--- a/app/views/static_pages/truncate.html.erb
+++ b/app/views/static_pages/truncate.html.erb
@@ -28,6 +28,7 @@
           <option> c3demand.fct_le_tester_fc </option>
           <option> c3demand.fct_order_replen </option>
           <option> c3demand.fct_planned_store_rng </option>
+          <option> c3demand.fct_post_launch_adj_hist </option>
           <option> c3demand.fct_post_launch_new </option>
           <option> c3demand.fct_post_launch_new_tester </option>
           <option> c3demand.fct_pre_launch_new </option>
