find by to where for gift card screen

--- a/app/views/allocation_order_lines/index.html.erb
+++ b/app/views/allocation_order_lines/index.html.erb
@@ -13,7 +13,7 @@
       <th> Qty Scanned </th>
     </tr>
 
-    <% @allocation_order_lines.find_each do |allocation_order_lines| %>
+    <% @allocation_order_lines.each do |allocation_order_lines| %>
         <tr>
           <td><%= allocation_orders.order_num %></td>
           <td><%= allocation_orders.item_code %></td>
