--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,6 +31,7 @@
                   <li><%= link_to "Pick Path Maintenance", pick_paths_path %></li>
                   <li><%= link_to "Basket Maintenance", baskets_path %></li>
                   <li><%= link_to "Allocation Orders", allocation_orders_url %></li>
+                  <li><%= link_to "Gift Cards", giftcard_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Allocation", allocate_path %></li>
                 </ul>
