--- a/app/views/static_pages/load.html.erb
+++ b/app/views/static_pages/load.html.erb
@@ -50,6 +50,9 @@
           <option> c3dss.fct_planned_store </option>
           <option> c3dss.fct_planned_vendor </option>
           <option> c3dss.fct_store_forecast_raw </option>
+          <option> c3dss.fct_store_plan </option>
+          <option> c3dss.fct_store_plan_header </option>
+          <option> c3dss.fct_store_plan_header_element </option>
           <option> c3dss.fct_store_sales_weight </option>
           <option> c3dss.fct_store_ranging_weight </option>
           <option> c3dss.fct_new_store_ranging </option>
