--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,7 @@
                   <li><%= link_to "Gift Cards", giftcard_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Allocation", allocate_path %></li>
+                  <li><%= link_to "Orders to pack", selection_path %></li>
                 </ul>
               </li>
           <% end %>
