--- a/app/views/allocation_orders/edit.html.erb
+++ b/app/views/allocation_orders/edit.html.erb
@@ -7,8 +7,41 @@
 
 
     <table>
-      <tr>
-        <th valign="top" align="left">Samples to pack:</th>
+      <% if !@address.empty? %>
+          <tr>
+            <th valign="top" align="left" width="270px">Address details:</th>
+            <td>
+              <table>
+
+                <tr>
+                  <td><%= @address['company_name'] %></td>
+                </tr>
+                <tr>
+                  <td><%= @address['first_name'] %> <%= @address['last_name'] %></td>
+                </tr>
+                <tr>
+                  <td><%= @address['address'] %></td>
+                </tr>
+                <tr>
+                  <td><%= @address['suburb'] %> <%= @address['postcode'] %></td>
+                </tr>
+                <tr>
+                  <td><%= @address['state'] %></td>
+                </tr>
+                <tr>
+                  <td><%= @address['country'] %></td>
+                </tr>
+
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td><br></td>
+          </tr>
+      <% end %>
+      <% if !@order_samples.empty? %>
+       <tr>
+        <th valign="top" align="left" width="270px">Samples to pack:</th>
         <td>
           <table>
             <% @order_samples.each do |sample| %>
@@ -20,21 +53,25 @@
         </td>
       </tr>
       <tr><td><br></td></tr>
+      <% end %>
 
       <%= fields_for @order do |order| %>
-
           <tr>
-            <th valign="top" align="left"><%= label_tag(:special_request_text, "Special request info:") %></th>
-            <td><%= order.text_area :special_request_text, :size => "100x6" %></td>
+            <th valign="top" align="left">Special request info:</th>
+            <td><%= order.text_area :special_request_text, :size => "90x6" %></td>
           </tr>
-          <tr>
-            <th valign="top" align="left"><%= label_tag(:gift_text, "Gift message:") %></th>
-            <td><%= order.text_field :gift_text, :size => "50" %></td>
-          </tr>
-
-
+          <% gift_wrapped =["Y", "1"]
+             if gift_wrapped.include?(@order.is_gift_wrapped) %>
+            <tr>
+                <th valign="top" align="left">Gift message: </th>
+            <td><%= @order.gift_text %>   <%= link_to "Print Message", print_message_path(:id=>@allocation_order) %>
+            </td>
+            </tr>
+          <% end %>
       <% end %>
       <tr><td><br></td></tr>
+
+      <% if !@order_items.empty? %>
       <tr>
         <th align="left" valign="top">Order Items:</th>
         <td>
@@ -42,15 +79,16 @@
             <% @order_items.each do |line| %>
                 <tr>
                   <td width="70px"><%= line[:item_code] %> </td>
-                  <td width="300px"><%= line[:item_desc] %> </td>
+                  <td width="300px"><%= line[:description] %> </td>
                   <td><%= line[:qty_required] %> </td>
                 </tr>
             <% end %>
           </table>
         </td>
       </tr>
+      <% end %>
       <tr><td><br>
-        <%= allocation_order.hidden_field :order_complete, :value => 1 %></td></tr>
+        <%= allocation_order.hidden_field :order_complete, :value => true %></td></tr>
       <tr>
         <td colspan="2" align="center"><%= allocation_order.submit "Complete Order" %>  </td>
       </tr>
