sales order lookup

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,11 +8,13 @@
     <th>Admin</th>
     <th>Demand User</th>
     <th>Direct User</th>
+    <th>Customer Service</th>
   </tr>
   <tr>
     <td> <%= @user.email %>  </td>
     <td> <%= @user.admin %>  </td>
     <td> <%= @user.demand %> </td>
     <td> <%= @user.direct %> </td>
+    <td> <%= @user.customer_service %> </td>
   </tr>
 </table>
