Order display page: buttons change

--- a/app/views/allocation_orders/edit.html.erb
+++ b/app/views/allocation_orders/edit.html.erb
@@ -61,11 +61,15 @@
         <th valign="top" align="left">Special request info:</th>
         <td><%= @order.special_request_text %></td>
       </tr>
+      <tr>
+        <td><br></td>
+      </tr>
       <% gift_wrapped =["Y", "1"]
          if gift_wrapped.include?(@order.is_gift_wrapped) %>
           <tr>
             <th valign="top" align="left">Gift message:</th>
-            <td><%= @order.gift_text %>   <%= link_to "Print Message", print_message_path(:id => @allocation_order) %>
+            <td><%= @order.gift_text %>   <%= link_to "Print Message", print_message_path(:id => @allocation_order), class: "btn btn-primary", :data => {:disable_with => "Please wait" }%>
+
             </td>
           </tr>
       <% end %>
@@ -92,7 +96,7 @@
       <tr><td><br>
         <%= allocation_order.hidden_field :order_complete, :value => 0 %></td></tr>
       <tr>
-        <td colspan="2" align="center"><%= allocation_order.submit "Complete Order" %>  </td>
+        <td colspan="2" align="center"><%= allocation_order.submit "Complete Order", :class => 'btn btn-warning btn-large', :data => {:disable_with => "Please wait" } %>  </td>
       </tr>
 
     </table>
