Changed typo Gis -> gift

--- a/app/views/allocation_orders/edit.html.erb
+++ b/app/views/allocation_orders/edit.html.erb
@@ -67,7 +67,7 @@
       <% gift_wrapped =["Y", "1"]
          if gift_wrapped.include?(@order.is_gift_wrapped) %>
           <tr>
-            <th valign="top" align="left">GIs gift wrapped?</th>
+            <th valign="top" align="left">Gift gift wrapped?</th>
             <td class="red">Y
             </td>
           </tr>
